@@ -146,7 +146,7 @@ class Steam
 	 */
 	public function populateSteamAppsTable()
 	{
-		$lastUpdate = Settings::value('APIs.Steam.last_update');
+		$lastUpdate = Settings::value('APIs.steam_apps.last_update');
 		$this->lastUpdate = $lastUpdate > 0 ? $lastUpdate : 0;
 		if ((time() - (int)$this->lastUpdate) > 86400) {
 			// Set time we updated steam_apps table
