@@ -101,7 +101,7 @@ APIs		amazonassociatetag	n01369-20	The amazon associate tag. Used for music/book
 APIs		amazonprivkey	B58mVwyj+T/MEucxWugJ3GQ0CcW2kQq16qq/1WpS	The amazon private api key. Used for music/book lookups.	amazonprivkey
 APIs		amazonpubkey	AKIAIPDNG5EU7LB4AD3Q	The amazon public api key. Used for music/book lookups.	amazonpubkey
 APIs		anidbkey		The Anidb api key. Used for Anime lookups.	anidbkey
-APIs    Steam   last_update	0	Last time we updated steam_apps table.	laststeamupdate
+APIs    steam_apps   last_update	0	Last time we updated steam_apps table.	laststeamappsupdate
 APIs		fanarttvkey		The Fanart.tv api key. Used for Fanart.tv lookups. Fanart.tv would appreciate it if you use this service to help them out by adding high quality images not already available on TMDB.	fanarttvkey
 APIs		giantbombkey		The giantbomb api key. Used for game lookups.	giantbombkey
 APIs		rottentomatokey	qxbxyngtujprvw7jxam2m6na	The api key used for access to rotten tomatoes.	rottentomatokey
